# obus

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  autogen.sh  configure.ac  obus.pc.in  protocol.txt
examples/: Makefile.am
examples/net/: Makefile.am  net.xml
examples/net/client/: Makefile.am  atom.mk  netclient.c
examples/net/server/: Makefile.am  atom.mk  log.h  netd.c  netif.c  netif.h
examples/ps/: ps.xml
examples/ps/client/: Makefile.am  atom.mk  log.h  psclient.c
examples/ps/java/: .classpath  .project  AndroidManifest.xml  build.xml  project.properties
examples/ps/java/res/layout/: activity_main.xml
examples/ps/java/res/values/: strings.xml
examples/ps/java/src/com/parrot/obus/test/ps/: MainActivity.java
examples/ps/java/src/com/parrot/obus/test/psbus/: IPsBusEvent.java  IPsProcess.java  IPsSummary.java
examples/ps/java/src/com/parrot/obus/test/psbus/impl/: PsBus.java  PsProcess.java  PsSummary.java
examples/ps/java/src/com/parrot/obus/test/psbus/mock/: MockPsProcess.java  MockPsSummary.java
examples/ps/server/: Makefile.am  atom.mk  log.h  psd.c
examples/ps/vala/: atom.mk  psd.vala
java/: .MODULE_LICENSE_BSD  .cproject  .project  Android.mk  AndroidManifest.xml  build.gradle  build.xml  custom_rules.xml  gradle.properties  settings.gradle
java/gradle/: android.gradle  common.gradle  empty.gradle  police.gradle  upload.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/jni/: Android.mk  socket.c
java/src/com/parrot/obus/: BusClient.java  BusEventsNotifier.java  BusObjectEventsNotifier.java  BusObjectsRegistry.java  IBusMethodCall.java  IBusObject.java  IBusObjectEvent.java  MethodCallAck.java  MethodState.java  ObusAddress.java
java/src/com/parrot/obus/internal/: Buffer.java  Bus.java  Client.java  Core.java  Descriptor.java  ObusBusEvent.java  ObusCall.java  ObusEvent.java  ObusObject.java  ObusSocket.java  ObusStruct.java  Protocol.java  Transport.java  package-info.java
java/src/com/parrot/obus/mock/: MockBusClient.java  MockBusObject.java  MockBusObjectEvent.java  MockMethodCall.java  package-info.java
python/: wxpyobus.py
python/hmi/: __init__.py  app.py  busdata.py  dlgabout.py  inotify.py  mainframe.py  utils.py
python/obus/: __init__.py  buffer.py  bus.py  buseventbase.py  client.py  descriptors.py  looper.py  protocol.py  transport.py  xmlbus.py
python/obus/data/: __init__.py  obus_busevent.py  obus_call.py  obus_event.py  obus_object.py  obus_struct.py
src/: Makefile.am
src/libobus/: Android.mk  Makefile.am  atom.mk  libobus.mk
src/libobus/include/: libobus.h  libobus_private.h
src/libobus/src/: obus_buffer.h  obus_bus.c  obus_bus.h  obus_bus_api.c  obus_bus_api.h  obus_bus_event.c  obus_bus_event.h  obus_call.c  obus_call.h  obus_client.c  obus_event.c  obus_event.h  obus_field.c  obus_field.h  obus_hash.c  obus_hash.h  obus_header.h  obus_io.c  obus_io.h  obus_list.h  obus_log.c  obus_log.h  obus_loop.c  obus_loop.h  obus_loop_posix.c  obus_object.c  obus_object.h  obus_packet.c  obus_packet.h  obus_platform.h  obus_server.c  obus_socket.c  obus_socket.h  obus_struct.c  obus_struct.h  obus_timer.c  obus_timer.h  obus_timer_posix.c  obus_utils.c  obus_utils.h
src/obusgen/: Makefile.am  atom.mk  obusgen.py  obusparser.py
src/obusgen/c/: Makefile.am  __init__.py  obus_c.py  obus_c_bus_event.py  obus_c_enum.py  obus_c_event.py  obus_c_method.py  obus_c_type.py  obus_c_utils.py
src/obusgen/java/: Makefile.am  __init__.py  obus_java.py
src/obusgen/vala/: Makefile.am  __init__.py  obus_vala.py
vala/: atom.mk  libobus.vapi
