## Process this file with automake to produce Makefile.in
###############################################################################
# Makefile.am for obusgen automake build system
###############################################################################
AUTOMAKE_OPTIONS = subdir-objects

obusgencdir = $(pythondir)/obusgen/c

obusgenc_PYTHON = \
	__init__.py \
	obus_c.py \
	obus_c_bus_event.py \
	obus_c_enum.py \
	obus_c_event.py \
	obus_c_method.py \
	obus_c_type.py \
	obus_c_utils.py

