## Process this file with automake to produce Makefile.in
###############################################################################
# Makefile.am for obusgen automake build system
###############################################################################
AUTOMAKE_OPTIONS = subdir-objects

obusgenjavadir = $(pythondir)/obusgen/java

obusgenjava_PYTHON = \
	__init__.py \
	obus_java.py

