## Process this file with automake to produce Makefile.in
###############################################################################
# Makefile.am for obusgen automake build system
###############################################################################
AUTOMAKE_OPTIONS = subdir-objects

obusgenvaladir = $(pythondir)/obusgen/vala

obusgenvala_PYTHON = \
	__init__.py \
	obus_vala.py

